[PS-81] Add ability to pause derailments for a time period
