# docs/openapi/openapi.yaml
@@ -12,6 +12,115 @@ externalDocs:
 tags:
 - name: Derailment Manager API
 - name: Derailments API
+paths:
+  /derailments:
+    get:
+      summary: Get a list of service derailments
+      operationId: Derailments.list
+      tags:
+      - Derailments API
+      parameters:
+      - name: page
+        in: query
+        schema:
+          type: integer
+          format: int32
+          default: 1
+      - name: per_page
+        in: query
+        schema:
+          type: integer
+          format: int32
+          default: 100
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/DerailmentModel"
+  /derailments/{identifier}:
+    get:
+      summary: Get details about a specific derailment
+      operationId: Derailments.get
+      tags:
+      - Derailments API
+      parameters:
+      - name: identifier
+        in: path
+        required: true
+        schema:
+          $ref: "#/components/schemas/UUID"
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/DerailmentModel"
+  /manage_derailments/pause:
+    delete:
+      summary: Unpause an ongoing derailment pause early
+      operationId: Derailments.unpause
+      tags:
+      - Derailment Manager API
+      responses:
+        "204":
+          description: No Content
+    post:
+      summary: Take a break from derailments for a time period
+      operationId: Derailments.pause
+      tags:
+      - Derailment Manager API
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/PauseModel"
+        required: true
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/PauseModel"
+    get:
+      summary: Check if there's an ongoing pause on derailments
+      operationId: Derailments.getPause
+      tags:
+      - Derailment Manager API
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/PauseModel"
+  /manage_derailments/rollback/{identifier}:
+    post:
+      summary: Rollback an ongoing derailment
+      operationId: Derailments.rollback
+      tags:
+      - Derailment Manager API
+      responses:
+        "201":
+          description: Created
+  /manage_derailments/summon:
+    post:
+      summary: Summon a derailment
+      operationId: Derailments.summon
+      tags:
+      - Derailment Manager API
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/DerailmentModel"
 components:
   schemas:
     DerailedEntity:
@@ -82,119 +191,6 @@ components:
       type: string
       format: uuid
       pattern: "[a-fA-F0-9]{8}-[a-fA-F0-9]{4}-[a-fA-F0-9]{4}-[a-fA-F0-9]{4}-[a-fA-F0-9]{12}"
-paths:
-  /derailments:
-    get:
-      summary: Get a list of service derailments
-      operationId: Derailments.list
-      tags:
-      - Derailments API
-      parameters:
-      - name: page
-        in: query
-        schema:
-          type: integer
-          format: int32
-          default: 1
-      - name: per_page
-        in: query
-        schema:
-          type: integer
-          format: int32
-          default: 100
-      responses:
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: "#/components/schemas/DerailmentModel"
-  /derailments/{identifier}:
-    get:
-      summary: Get details about a specific derailment
-      operationId: Derailments.get
-      tags:
-      - Derailments API
-      parameters:
-      - name: identifier
-        in: path
-        required: true
-        schema:
-          $ref: "#/components/schemas/UUID"
-      responses:
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/DerailmentModel"
-  /manage_derailments/pause:
-    delete:
-      summary: Unpause an ongoing derailment pause early
-      operationId: Derailments.unpause
-      tags:
-      - Derailment Manager API
-      responses:
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/PauseModel"
-    post:
-      summary: Take a break from derailments for a time period
-      operationId: Derailments.pause
-      tags:
-      - Derailment Manager API
-      responses:
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/PauseModel"
-    get:
-      summary: Check if there's an ongoing pause on derailments
-      operationId: Derailments.getPause
-      tags:
-      - Derailment Manager API
-      responses:
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/PauseModel"
-  /manage_derailments/rollback/{identifier}:
-    post:
-      summary: Rollback an ongoing derailment
-      operationId: Derailments.rollback
-      tags:
-      - Derailment Manager API
-      parameters:
-      - name: identifier
-        in: path
-        required: true
-        schema:
-          $ref: "#/components/schemas/UUID"
-      responses:
-        "201":
-          description: Created
-  /manage_derailments/summon:
-    post:
-      summary: Summon a derailment
-      operationId: Derailments.summon
-      tags:
-      - Derailment Manager API
-      responses:
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/DerailmentModel"
 servers:
 - url: http://localhost:8080
   description: Auto generated value
